--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
       if youAreUsingJade
         p You are amazing
       else
-        p Get on it!
+        p Get on it! 123
       p.
         Jade is a terse and simple
         templating language with a
